# azathoth_allocator

./: Cargo.toml  README.md
src/: allocator.rs  base.rs  lib.rs  lock.rs  memtrack.rs
src/metadata/: freed.rs  mod.rs  tracker.rs
src/platform/: mod.rs
src/platform/linux/: inner.rs  maps.rs  mod.rs
src/platform/windows/: inner.rs  mem.rs  mod.rs
tests/: all_tests.rs  global.rs
