[package]
name = "azathoth_allocator"
version = "0.1.1"
edition = "2024"
description = "Main allocator used for the AzathothC2 platform"
repository = "https://github.com/AzathothC2/azathoth_allocator"
license = "MIT"
exclude = [
    "./tests/*"
]

[dependencies]
azathoth_libload = {version =  "0.1.3", features = ["hasher"] }
azathoth-utils = "0.1.2"
azathoth-core = "0.1.3"

[features]
default = []
multithread = []
